fix: add missing padding to previous commit

--- a/src/styles/frames/_region.scss
+++ b/src/styles/frames/_region.scss
@@ -164,12 +164,6 @@
         @media screen and (max-width: 767px) {
             padding-left: var(--space-outer);
         }
-
-        @media screen and (max-width: 1023px) {
-            a {
-                margin-top: calc(var(--space-outer) - 0.75rem);
-            }
-        }
     }
 
     .region__content-title {
